tests/errors/has_no_field.b
S :: struct { x int }

fn main() {
    s := S{x: 1};
    y := s.z;
}
